Koan CHANGELOG

* Mon Sep 04 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.2-1
- Allow for multiple values (comma seperated) to --virt-path
- Allow for multiple virt file sizes
- Refactoring around the virt bits
- Remove legacy sys.path hack as enchant has been removed (just use SSH)
- Try port 80 proxied XMLRPC by default (first) before trying 25151 

* Thu Aug 30 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
- Bridged networking control options (--virt-bridge)
- avahi support (--server=DISCOVER)
- do not allow autodetection of mac with --virt
- allow "xen" as alias for "xenpv" for --virt-type 
- correct arch name when passing to qemu hypervisor 
- don't complain when using default vcpu setting

* Thu Aug 09 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.0-1
- stable release
- don't check for libvirtd running if doesn't exist

* Thu Jul 26 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.2-1
- added XMLRPC version checking with cobbler server

* Fri Jul 20 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.1-1
- added qemu/kvm with --virt-type
- --virt-path support
- added --display to dump cobbler objects without taking action
- misc code & manpage cleanup

* Wed Jun 27 2007 Michael DeHaan <mdehaan@redhat.com> - 0.5.0-1
- Upgrades to take advantage of (and work with) Cobbler 0.5.0

* Thu May 31 2007 Michael DeHaan <mdehaan@redhat.com> - 0.4.0-1
- Change virt kernel/initrd download location to make SELinux happy

* Fri Apr 26 2007 Michael DeHaan <mdehaan@redhat.com> - 0.3.1-2
- Restore missing initrd build code for --replace-self
- Remove stray character from app.py

* Tue Apr 24 2007 Michael DeHaan <mdehaan@redhat.com> - 0.3.0-1
- Fix error with --system
- Fix IP vs MAC regex checking

* Thu Apr 19 2007 Michael DeHaan <mdehaan@redhat.com> - 0.2.9-1
- koan now speaks XMLRPC with cobbler (requires cobbler > 0.4.7-4)
- allow any RAM size >128MB.
- add --virtname option (see manpage)

* Fri Mar 23 2007 Michael DeHaan <mdehaan@redhat.com> - 0.2.8-3